Fixes for various element alignments

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ main img {
 
 .item-double {
   flex: 2;
+  margin: 10px;
 }
 
 /* -------  Navigation ------- */
@@ -61,7 +62,7 @@ header {
 
 .logo {
   font-family: "Pangolin", cursive;
-  font-size: 72px;
+  font-size: 48px;
   color: #fff;
 }
 
@@ -72,6 +73,7 @@ header nav {
 
 header nav ul {
   display: flex;
+  padding-left: 0;
 }
 
 header nav ul li {
@@ -81,7 +83,7 @@ header nav ul li {
 header nav ul li a {
   color: #fff;
   text-decoration: none;
-  padding: 0 20px 0 0;
+  padding: 0 10px;
 }
 
 header nav ul li a:hover {
@@ -102,7 +104,7 @@ form label {
 form select,
 form input {
   margin-bottom: 20px;
-  width: 180px;
+  width: 120px;
 }
 
 form button {
@@ -114,8 +116,9 @@ form button {
   width: 100%;
 }
 
-form .item {
+.form-item {
   display: flex;
+  justify-content: space-between;
 }
 
 form .item > label {
@@ -136,6 +139,24 @@ footer p {
 
 /* -------  Media Query ------- */
 
+@media all and (min-width: 400px) {
+  form select,
+  form input {
+    width: 150px;
+  }
+}
+
+@media all and (min-width: 500px) {
+  .logo {
+    font-size: 60px;
+  }
+
+  form select,
+  form input {
+    width: 180px;
+  }
+}
+
 @media all and (min-width: 768px) {
   header {
     display: flex;
@@ -149,19 +170,50 @@ footer p {
     flex-direction: row;
   }
 
-  .group {
-    flex-direction: row;
-    align-items: center;
+  form select,
+  form input,
+  .form-button {
+    width: 130px;
   }
 
-  form .item {
-    display: flex;
-    flex-direction: column;
+  .form-item > input, 
+  .form-item > select {
+    margin-bottom: 0;
+  }
+
+  .logo {
+    font-size: 72px;
   }
 
   .form-group {
     display: flex;
     flex: 1;
     justify-content: space-around;
+    align-items: center;
+  }
+
+  .form-item {
+    flex-direction: column;
+  }
+
+  .group {
+    flex-direction: row;
+    align-items: center;
+  }
+}
+
+@media all and (min-width: 900px) {
+  form select,
+  form input,
+  .form-button {
+    width: 150px;
+  }
+}
+
+@media all and (min-width: 1100px) {
+  form select,
+  form input,
+  .form-button {
+    width: 180px;
   }
 }
